# CarbonPilotAI

./: .gitignore  README.md  docker-compose.yml  fix_all_tests.js  fix_lint.js  fix_tests.js
.github/workflows/: backend.yml  playwright.yml
backend/: .env.example  .gcloudignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agent/: prompts.py  tools.py
backend/app/api/: health.py
backend/app/api/v1/: actions.py  calculate.py  chat.py  ocr.py  router.py  simulate.py
backend/app/data/: __init__.py  action_catalogue.py  benchmarks.json  country_grid.json  emission_factors.json  loader.py
backend/app/engines/: __init__.py  carbon_engine.py  ranking_engine.py  simulation_engine.py
backend/app/engines/calculators/: constants.py  consumption_calculator.py  diet_calculator.py  digital_calculator.py  home_calculator.py  transport_calculator.py
backend/app/middleware/: correlation_id.py  rate_limiter.py
backend/app/models/: __init__.py  actions.py  carbon.py  chat.py  errors.py  simulation.py
backend/app/services/: agent_service.py  agent_tools.py  calculator_service.py  inventory_builder.py  llm_client.py  ocr_service.py  plan_generator_service.py  ranker_service.py  simulator_service.py
backend/tests/: conftest.py  test_calculator.py  test_cloud_run_limits.py  test_ranker_service.py  test_simulation_engine.py
backend/tests/integration/: test_calculate_api.py  test_simulate_api.py
frontend/: Dockerfile  README.md  firebase.json  package-lock.json  package.json  playwright.config.ts
frontend/.firebase/: hosting.b3V0.cache
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/actions/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/: BeforeAfterChart.tsx  ExecutionPlanCard.tsx  MathTooltip.tsx  TrustModal.tsx
frontend/src/components/actions/: ActionFilters.tsx  ActionList.tsx
frontend/src/components/dashboard/: DashboardInsights.tsx  DashboardMetrics.tsx  DashboardSummary.tsx
frontend/src/components/execution-plan/: ExecutionPlanHeader.tsx  ExecutionPlanMetrics.tsx  ExecutionPlanResources.tsx  ExecutionPlanSteps.tsx
frontend/src/components/onboarding/: DigitalFootprintForm.tsx  FileUploadZone.tsx  ManualEntryForm.tsx  StepNavigation.tsx
frontend/src/components/simulator/: AiScenarioInput.tsx  ScenarioSelector.tsx  SimulationResults.tsx
frontend/src/components/ui/: Card.tsx  EmptyState.tsx  LoadingSpinner.tsx  LoadingState.tsx  MetricCard.tsx  SectionHeader.tsx  SkeletonCard.tsx
frontend/src/constants/: mockData.ts  scenarios.tsx
frontend/src/context/: CarbonDataContext.tsx
frontend/src/hooks/: useExecutionPlan.ts  useFileUpload.ts  useLocalStorage.ts  useRankedActions.ts  useSimulation.ts
frontend/src/services/: api.ts
frontend/src/types/: carbon.ts  schemas.ts  simulator.ts
frontend/src/utils/: fileValidation.ts
frontend/tests/e2e/: accessibility.spec.ts  ai-parsing.spec.ts  manual-entry.spec.ts  ocr-upload.spec.ts  recommendations.spec.ts  simulator.spec.ts
(+2 files in other folders)
